Media module: Avoid image being too narrow on first load
This was caused by setting max width on image prematurely, which seemed
to catch the media module's text width.

That feature was only relevant when using multiple images in one
media module. That use case is no longer relevant, therefore that
feature is now removed.

--- a/packages/kobber-components/src/index.css
+++ b/packages/kobber-components/src/index.css
@@ -1718,7 +1718,6 @@
       position: relative;
       margin: 0;
       display: flex;
-      max-width: var(--image-width, auto);
       height: var(--kobber-component-media-module-image-container-size-height);
       slot[name="media"] {
         display: flex;
